// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`questionSubmitted callbacks dispatches another request when there are no results and there is a locale in the request 1`] = `
Object {
  "authorization": "Bearer abc123",
  "callbacks": Object {
    "done": [Function],
    "fail": [Function],
  },
  "method": "post",
  "params": Object {
    "deflection_channel_id": 67,
    "enquiry": "hello world",
    "interaction_reference": 8888,
    "interaction_reference_type": 1,
    "labels": Array [
      "this",
      "is",
      "a",
      "label",
    ],
    "locale": null,
    "via_id": 67,
  },
  "path": "/api/v2/answer_bot/interaction?include=html_body",
  "useHostMappingIfAvailable": false,
}
`;

exports[`questionSubmitted callbacks dispatches expected actions on failed request 1`] = `
Array [
  Object {
    "payload": Object {
      "sessionData": Object {
        "articles": Array [],
        "fallbackSuggested": false,
        "requestStatus": null,
        "resolved": false,
      },
      "sessionID": 123456789,
    },
    "type": "widget/answerBot/SESSION_STARTED",
  },
  Object {
    "payload": Object {
      "message": "hello world",
      "sessionID": 1234,
      "timestamp": 123456789,
    },
    "type": "widget/answerBot/QUESTION_SUBMITTED_PENDING",
  },
  Object {
    "payload": Object {
      "timestamp": 123456789,
    },
    "type": "widget/answerBot/BOT_TYPING",
  },
  Object {
    "payload": Object {
      "error": "error",
      "sessionID": 1234,
    },
    "type": "widget/answerBot/QUESTION_SUBMITTED_REJECTED",
  },
]
`;

exports[`questionSubmitted callbacks dispatches expected actions on successful request 1`] = `
Array [
  Object {
    "payload": Object {
      "sessionData": Object {
        "articles": Array [],
        "fallbackSuggested": false,
        "requestStatus": null,
        "resolved": false,
      },
      "sessionID": 123456789,
    },
    "type": "widget/answerBot/SESSION_STARTED",
  },
  Object {
    "payload": Object {
      "message": "hello world",
      "sessionID": 1234,
      "timestamp": 123456789,
    },
    "type": "widget/answerBot/QUESTION_SUBMITTED_PENDING",
  },
  Object {
    "payload": Object {
      "timestamp": 123456789,
    },
    "type": "widget/answerBot/BOT_TYPING",
  },
  Object {
    "payload": Object {
      "deflection": Object {
        "x": 123,
      },
      "interaction_access_token": Object {
        "y": 456,
      },
      "message": Array [
        1,
        2,
        3,
      ],
      "sessionID": 1234,
      "timestamp": 123456789,
    },
    "type": "widget/answerBot/QUESTION_SUBMITTED_FULFILLED",
  },
]
`;

exports[`questionSubmitted dispatches the expected action without session starting 1`] = `
Array [
  Object {
    "payload": Object {
      "message": "hello world",
      "sessionID": 4567,
      "timestamp": 123456789,
    },
    "type": "widget/answerBot/QUESTION_SUBMITTED_PENDING",
  },
  Object {
    "payload": Object {
      "timestamp": 123456789,
    },
    "type": "widget/answerBot/BOT_TYPING",
  },
]
`;

exports[`questionSubmitted dispatches the expected pending actions 1`] = `
Array [
  Object {
    "payload": Object {
      "sessionData": Object {
        "articles": Array [],
        "fallbackSuggested": false,
        "requestStatus": null,
        "resolved": false,
      },
      "sessionID": 123456789,
    },
    "type": "widget/answerBot/SESSION_STARTED",
  },
  Object {
    "payload": Object {
      "message": "hello world",
      "sessionID": 1234,
      "timestamp": 123456789,
    },
    "type": "widget/answerBot/QUESTION_SUBMITTED_PENDING",
  },
  Object {
    "payload": Object {
      "timestamp": 123456789,
    },
    "type": "widget/answerBot/BOT_TYPING",
  },
]
`;

exports[`questionSubmitted sends the expected http params 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "authorization": "Bearer abc123",
        "callbacks": Object {
          "done": [Function],
          "fail": [Function],
        },
        "method": "post",
        "params": Object {
          "deflection_channel_id": 67,
          "enquiry": "hello world",
          "interaction_reference": 8888,
          "interaction_reference_type": 1,
          "labels": Array [
            "this",
            "is",
            "a",
            "label",
          ],
          "locale": "tl",
          "via_id": 67,
        },
        "path": "/api/v2/answer_bot/interaction?include=html_body",
        "useHostMappingIfAvailable": false,
      },
    ],
  ],
  "results": undefined,
}
`;
